+ Itô formula for multidimensional processes; * minor corrections

--- a/notes/env-notes.tex
+++ b/notes/env-notes.tex
@@ -178,6 +178,7 @@
 \def\inv[#1]{#1^{-1}}
 % \definemathcommand [d] [nolop] {\mfunction{d}}
 \def\d{\text{d}}
+\def\D{\text{D}}
 % \def\infinitelyoften{\text{i.o.}}
 % \def\eventually{\text{ev}}
 
