--- a/talks/env-talks.tex
+++ b/talks/env-talks.tex
@@ -66,7 +66,7 @@
 \setupbodyfont [\getvariable{document}{font}, \getvariable{document}{fontsize-document}]    % alternatives: xitsbidi, euler
 
 % Bibliography
-\usebtxdataset[../bib.bib]
+\usebtxdataset[bib.bib]
 
 
 
