+ random folder; + Nik on screen usage

--- a/talks/talk20190405.tex
+++ b/talks/talk20190405.tex
@@ -95,7 +95,7 @@
 
 \startmode [presentation]
 
-\startslide [title={Ito integral: \m{f ∈ L^2}}]
+\startslide [title={Itô integral: \m{f ∈ L^2}}]
 	\input knuth
 \stopslide
 
@@ -106,7 +106,7 @@
 % \stopmode
 
 
-\startslide [title={Ito integral: \m{f ∈ 𝓛^2}}]
+\startslide [title={Itô integral: \m{f ∈ 𝓛^2}}]
 
 	This is a citation \cite[HKSZ2016].
 
@@ -120,11 +120,11 @@
 \stopslide
 
 
-\startslide [title={Ito isometry: \m{f ∈ L^2}}]
+\startslide [title={Itô isometry: \m{f ∈ L^2}}]
 	bla bla bla
 \stopslide
 
-\startslide [title={Differential formula}]
+\startslide [title={Differential formula (Itô, 1944 TODO:ref)}]
 	bla bla bla
 \stopslide
 
