--- a/notes/prd-analysis/prd-analysis.tex
+++ b/notes/prd-analysis/prd-analysis.tex
@@ -23,6 +23,10 @@
 		\component cmp-stochastic-analysis
 	\stoppart
 
+	\startpart[title={Infinite-dimenstional analysis}, reference=prt:infinite-dimenstional-analysis]
+		\component cmp-infinite-dimenstional-analysis
+	\stoppart
+
 	% \startpart[title={modules}, reference=prt:modules]
 	% 	\component cmp-modules
 	% \stoppart
