--- a/notes/prd-analysis/prd-analysis.tex
+++ b/notes/prd-analysis/prd-analysis.tex
@@ -4,31 +4,33 @@
 
 
 \startfrontmatter
+
 	% \component titlepage     %Titlepage for the book
 	\completecontent    % Contents
+
 \stopfrontmatter
 
 
 \startbodymatter
 
 	\startpart[title={Real analysis}, reference=prt:real-analysis]
-		\component cmp-real-analysis
+		\component  cmp-real-analysis
 	\stoppart
 
 	\startpart[title={Probability theory}, reference=prt:probability-theory]
-		\component cmp-probability-theory
+		\component  cmp-probability-theory
 	\stoppart
 
 	\startpart[title={Stochastic analysis}, reference=prt:stochastic-analysis]
-		\component cmp-stochastic-analysis
+		\component  cmp-stochastic-analysis
 	\stoppart
 
-	\startpart[title={Infinite-dimenstional analysis}, reference=prt:infinite-dimenstional-analysis]
-		\component cmp-infinite-dimenstional-analysis
+	\startpart[title={Infinite-dimensional analysis}, reference=prt:infinite-dimensional-analysis]
+		\component  cmp-infinite-dimensional-analysis
 	\stoppart
 
 	% \startpart[title={modules}, reference=prt:modules]
-	% 	\component cmp-modules
+	% 	\component  cmp-modules
 	% \stoppart
 
 \stopbodymatter
