--- a/talks/talk20190405.tex
+++ b/talks/talk20190405.tex
@@ -34,7 +34,7 @@
 
 \startalign [middle]
 
-	{\tfc
+	{\tfd
 		\color[\getvariable{document}{color-foreground-1}]{Generalization of stochastic calculus}\\
 		and its applications in\\
 		\color[\getvariable{document}{color-foreground-2}]{large deviations theory}}
@@ -54,6 +54,7 @@
 	\color[\getvariable{document}{color-foreground-1}]{Prof Hui-Hsiung Kuo}
 
 	\color[\getvariable{document}{color-foreground-2}]{Prof Padmanabhan Sundar}
+
 \stopalign
 
 \stopslide
@@ -115,7 +116,35 @@
 \stopslide
 
 \startslide [title={Itô integral: \m{f ∈ L^2}}]
+	Definition
 
+
+	Properties of the associated process \m{X_t = ∫_0^t f(t) \d B(t)}
+	\startitemize[n]
+		\item  continuity
+		\item  martingale
+	\stopitemize
+
+\stopslide
+
+\startslide [title={Itô integral: \m{f ∈ 𝓛^2}}]
+	Definition
+
+	Properties of the associated process \m{X_t = ∫_0^t f(t) \d B(t)}
+	\startitemize[n]
+		\item  continuity
+		\item  local martingale
+	\stopitemize
+
+\stopslide
+
+\startslide [title={Itô formula}]
+\stopslide
+
+\startslide [title={Stochastic differential equations}]
+\stopslide
+
+\startslide [title={Girsanov theorem}]
 \stopslide
 
 % \startmode [manuscript]
@@ -167,7 +196,35 @@
 
 \startmode [presentation]
 
-\startslide [title={Large deviations theory}]
+\startslide [title={Introduction}]
+
+\stopslide
+
+\startslide [title={Weak convergence of measures}]
+
+\stopslide
+
+\startslide [title={Laplace principle}]
+
+\stopslide
+
+\startslide [title={Cramér theorem}]
+
+\stopslide
+
+\startslide [title={Sanov theorem}]
+
+\stopslide
+
+\startslide [title={Schilder theorem}]
+
+\stopslide
+
+\startslide [title={Freidlin–Wentzell theorem}]
+
+\stopslide
+
+\startslide [title={Freidlin–Wentzell theorem}]
 
 \startcolumns[n=2]
 {\tfb Column 1}
