--- a/talks/env-talks.tex
+++ b/talks/env-talks.tex
@@ -93,8 +93,8 @@
 \def \linspan[#1]{\mfunction{span} \delim[#1][\{][\}]}
 \def \inv[#1]{#1^{-1}}
 
-\def \d{\text{d}}
-\def \D{\text{D}}
+\def \d{\,\text{d}}
+\def \D{\,\text{D}}
 
 \definemathcommand [ess] [limop] {\mfunction{ess}}
 \definemathcommand [ker] [nolop] {\mfunction{ker}}
